first stepts in data work

--- a/literature_review/Covid19_LiteratureReviewNotes.html
+++ b/literature_review/Covid19_LiteratureReviewNotes.html
@@ -411,12 +411,204 @@ pre code {
 <div id="findings-3" class="section level4">
 <h4>Findings<br />
 </h4>
+<ul>
+<li>“at the time of writing, Covid-19 had not been tamed in Indonesia my any means.”</li>
+<li>Poverty impacts remain uncertain but may be less severe than some other impacts</li>
+<li>Informal workers can be seriously hit by the crisis and its consequences such as social distancing measures and lockdowns</li>
+</ul>
 </div>
 <div id="method-6" class="section level4">
 <h4>Method<br />
 </h4>
 </div>
 <div id="conclusion-6" class="section level4">
+<h4>Conclusion<br />
+</h4>
+<ul>
+<li>The poverty impacts of the Covid-19 crisis (as of June, 2020) remain unvertain but may be less severe than some other impacts</li>
+<li>Well-design stimulus measures will help once the pandemic has been brought under control</li>
+</ul>
+<div id="potential-long-term-implications" class="section level5">
+<h5>Potential long-term implications:</h5>
+<ul>
+<li>negative nutrition outcomes (stunting, wasting)</li>
+<li>Jordà, Singh and Taylor (2020) find that a shift to precautionary savings by households and individuals is typical during pandemics</li>
+<li>Increased risk aversion will further depress the equilibrium interest rate. Banks will have to hold the excess liquidity caused by a lack of viable projects due to expectations that repressed economic activity will continue. –&gt; liquidity trap.
+<ul>
+<li>The massive increases in the supply of money are met with only limited use of it by households and businesses (Stiglitz and Rashid 2020)</li>
+</ul></li>
+</ul>
+</div>
+</div>
+</div>
+<div id="obayelu2021" class="section level2">
+<h2><span class="citation">Obayelu et al. (2021)</span></h2>
+<div id="point-of-analysis-7" class="section level4">
+<h4>Point of analysis<br />
+</h4>
+<p>The study</p>
+<ul>
+<li>assesses the trend of COVID-19 in Nigeria between the end of February 2020 till the beginning of January 2021;</li>
+<li>examines the immediate short-term and potential long-term effects of COVID-19 outbreak on the socioeconomics, agricultural systems, security of food and dietary intake in Nigeria;</li>
+<li>assesses the various actions taken against the COVID-19 in Nigeria to prevent deteriorating socioeconomic, food security and dietary intake conditions of people in Nigeria; and</li>
+<li>suggests the potential mitigation strategies to combat the effects of COVID-19 on agriculture, food security and nutrition in Nigeria.</li>
+<li><span class="math inline">\(N = 72\)</span> respondents</li>
+</ul>
+</div>
+<div id="data-7" class="section level4">
+<h4>Data<br />
+</h4>
+<ul>
+<li>Mainly based on &quot;personal observations, public opinion through mobile telephone survey of farm households residing in Lagos and Ibadan in Lagos and Oyo States, Nigeria, respectively, but have their farms located outsides their places of residence.</li>
+<li>The study conducts a rapid assessment survey that comprised of a structured questionnaire package</li>
+</ul>
+</div>
+<div id="findings-4" class="section level4">
+<h4>Findings<br />
+</h4>
+<ul>
+<li>About 65% households interviewed was found to rationed food they eat</li>
+<li>a COVID-19 impact survey conducted by the National Bureau of Statistics (NBS) shows that a 51% of households reduced their food consumption to cope with the shocks of the pandemic (NBS 2020)</li>
+</ul>
+</div>
+<div id="method-7" class="section level4">
+<h4>Method<br />
+</h4>
+</div>
+<div id="conclusion-7" class="section level4">
+<h4>Conclusion<br />
+</h4>
+<p>The shock of COVID-19 is not only a demand management problem but a multidimensional crisis requiring monetary, fiscal, and health policy responses with global collaboration and cooperation.</p>
+</div>
+</div>
+<div id="goswami2021" class="section level2">
+<h2><span class="citation">Goswami et al. (2021)</span></h2>
+<div id="point-of-analysis-8" class="section level4">
+<h4>Point of analysis<br />
+</h4>
+<p>The study explores the multiple pathways of present and future impact created by the pandemic and “Amphan” cyclonic storm on smallholder agricultural systems. Also, the study anticipates the behavior of the systems elements under different realistic scenarios of intervention. It also explored the severity and multi-faceted impacts of the pandemic on vulnerable smallholder agricultural production systems through in-depth interactions with key players at the micro-level.</p>
+</div>
+<div id="data-8" class="section level4">
+<h4>Data<br />
+</h4>
+</div>
+<div id="findings-5" class="section level4">
+<h4>Findings<br />
+</h4>
+</div>
+<div id="methods" class="section level4">
+<h4>Methods<br />
+</h4>
+<ul>
+<li>Qualitative exploration
+<ul>
+<li>consultation with the key informants with whom the authors had been working for several years.</li>
+<li>conducted individual interviews with farmers by respecting the pandemic’s rule of social distancing, especially during the lockdown.</li>
+</ul></li>
+<li>Fuzzy cognitive mapping (FCM)
+<ul>
+<li>FCM is a ‘mental modelling’ approach to create a map of cognition for individuals concerning a given problem space</li>
+<li>A mental model is an internally held representation of external reality by an individual (Jones et al., 2011) and may embody their reasoning about the structure and functioning of complex systems.</li>
+<li>multi-stakeholder workshops (for FCM), were not possible during the lockdown</li>
+</ul></li>
+</ul>
+</div>
+<div id="conclusion-8" class="section level4">
+<h4>Conclusion<br />
+</h4>
+</div>
+</div>
+<div id="suryahadi2020" class="section level2">
+<h2><span class="citation">Suryahadi, Al Izzati, and Suryadarma (2020)</span></h2>
+<div id="point-of-analysis-9" class="section level4">
+<h4>Point of analysis<br />
+</h4>
+<p>Estimate the impact of Covid-19 on poverty in Indonesia</p>
+</div>
+<div id="data-9" class="section level4">
+<h4>Data<br />
+</h4>
+<ul>
+<li>Forecast is based on historical economic shocks in Indonesia.
+<ul>
+<li>1997–98 Asian financial crisis.</li>
+<li>2005–06 large increases in the prices of fuel, especially kerosene</li>
+<li>rice price also increased</li>
+</ul></li>
+</ul>
+</div>
+<div id="findings-6" class="section level4">
+<h4>Findings<br />
+</h4>
+<p>see conclusion</p>
+</div>
+<div id="methods-1" class="section level4">
+<h4>Methods<br />
+</h4>
+<ul>
+<li>Translation of the impact of Covid-19 on economic growth into impact on average per capita household expenditure</li>
+<li><span class="math inline">\(\Delta logPCE_t =\alpha +\beta \Delta gGDP_t +\epsilon\)</span>
+<ul>
+<li><span class="math inline">\(\Delta logPCE\)</span> is change in the logarithm of average per capita household expenditure,</li>
+<li><span class="math inline">\(\Delta gGDP\)</span> is change in the rate of economic growth,</li>
+<li><span class="math inline">\(\beta\)</span> is the correlation parameter to be estimated
+<ul>
+<li>The model can be estimated using time series data on economic growth and average per capita household expenditure</li>
+</ul></li>
+</ul></li>
+</ul>
+</div>
+<div id="conclusion-9" class="section level4">
+<h4>Conclusion<br />
+</h4>
+<ul>
+<li>In contrast to the baseline projection of a 5% economic growth rate for 2020, various recent projections propose that Covid-19 will reduce Indonesia’s economic growth rate to between 4.2% and –3.5%.</li>
+<li>Best case scenario of Covid-19 impact (economic growth rate falls to 4.2%):
+<ul>
+<li>poverty rate increases from 9.2% in September 2019 to 9.7% by the end of 2020.</li>
+<li>1.3 mio people more in poverty</li>
+</ul></li>
+<li>worst-case scenario (economic growth rate falls to -3.5%):
+<ul>
+<li>poverty rate increases to 16.6%</li>
+<li>19.7 million more people become poor</li>
+</ul></li>
+</ul>
+</div>
+</div>
+<div id="goeb2020" class="section level2">
+<h2><span class="citation">Goeb et al. (2020)</span></h2>
+<div id="point-of-analysis-10" class="section level4">
+<h4>Point of analysis<br />
+</h4>
+<p>To understand how Myanmar’s crop marketing system has been affected by the COVID-19 crisis, phone interviews were conducted with more than 100 agricultural commodity traders roughly every 30 days from late May until early August 2020. A round of qualitative interviews was also conducted with key informants on land-trading routes to China, Thailand, and India.</p>
+</div>
+<div id="data-10" class="section level4">
+<h4>Data<br />
+</h4>
+<ul>
+<li>qualitative interviews with 100 agricultural commodity traders roughly every 30 days from late May until early August 2020 (4 months)</li>
+</ul>
+</div>
+<div id="findings-7" class="section level4">
+<h4>Findings<br />
+</h4>
+<p>Traders who reported that the pandemic is affecting their business in any way declined from 77 percent in late May to 43 percent in early August. Buying and marketing challenges were the most common disruptions reported in early August, followed by difficulties in collecting repayments on credit lent out to farmers. Increasing numbers of traders also reported difficulties in obtaining new loans or credit for their business. + increased mobile phone use (ICTs) for marketing of products * Higher shares of traders reported year-on-year decreases both in credit provision and in wholesale trading volumes in August compared to June. * More traders report a decrease in competition than an increase since the crisis began. * Crop buying and selling prices have been stable on average between April and August. * Border gate closures at the China (Muse), Thailand (Myawaddy), and India (Tamu) borders have resulted in drastic reductions in overland exports of agricultural commodities since March 2020. Key informants said that there has been almost no crop trading to China and India, while exports to Thailand are down over half compared to a year ago.</p>
+<div id="recommended-actions-for-policy" class="section level5">
+<h5>Recommended actions for policy</h5>
+<ul>
+<li>Coordinate domestic transport restrictions put in place in response to the recent second wave of COVID-19 to allow continued domestic trade of agricultural commodities.</li>
+<li>Facilitate safe exports of agricultural commodities. This should be done with formal agreements and government investments in monitoring and infrastructure. If borders remain closed into the monsoon harvest season later in 2020, farmers should expect to receive poor prices for their crops.</li>
+<li>Quickly expand the provision of loans for working capital to crop traders (CERP Action 2.1.1). This will enable traders to continue their buying activities through the coming harvest and prevent a possible decline in competition in the sector.</li>
+<li>Continue the waiver of the 2 percent withholding tax for crop traders (CERP Action 2.1.3).</li>
+</ul>
+</div>
+</div>
+<div id="methods-2" class="section level4">
+<h4>Methods<br />
+</h4>
+</div>
+<div id="conclusion-10" class="section level4">
 <h4>Conclusion<br />
 </h4>
 </div>
@@ -433,6 +625,12 @@ Béné, Christophe. 2020. <span>“<span class="nocase">Resilience of local food
 <div id="ref-Chrisendo2020" class="csl-entry">
 Chrisendo, Daniel, Vijesh V. Krishna, Hermanto Siregar, and Matin Qaim. 2020. <span>“<span class="nocase">Land-use change, nutrition, and gender roles in Indonesian farm households</span>.”</span> <em>Forest Policy and Economics</em> 118 (July): 102245. <a href="https://doi.org/10.1016/j.forpol.2020.102245">https://doi.org/10.1016/j.forpol.2020.102245</a>.
 </div>
+<div id="ref-Goeb2020" class="csl-entry">
+Goeb, Joseph, Yulu Tang, Phoo Pye Zone, Key Findings, and Recommended Actions. 2020. <span>“<span>Strategy Support Program Policy Note 26</span>,”</span> no. September: 1–8.
+</div>
+<div id="ref-Goswami2021" class="csl-entry">
+Goswami, Rupak, Kalyan Roy, Sudarshan Dutta, Krishnendu Ray, Sukamal Sarkar, Koushik Brahmachari, Manoj Kr Nanda, et al. 2021. <span>“<span class="nocase">Multi-faceted impact and outcome of COVID-19 on smallholder agricultural systems: Integrating qualitative research and fuzzy cognitive mapping to explore resilient strategies</span>.”</span> <em>Agricultural Systems</em> 189 (September 2020): 103051. <a href="https://doi.org/10.1016/j.agsy.2021.103051">https://doi.org/10.1016/j.agsy.2021.103051</a>.
+</div>
 <div id="ref-Josephson2021" class="csl-entry">
 Josephson, Anna, Talip Kilic, and Jeffrey D. Michler. 2021. <span>“<span class="nocase">Socioeconomic impacts of COVID-19 in low-income countries</span>.”</span> <em>Nature Human Behaviour</em> 5 (5): 557–65. <a href="https://doi.org/10.1038/s41562-021-01096-7">https://doi.org/10.1038/s41562-021-01096-7</a>.
 </div>
@@ -442,8 +640,14 @@ Kumar, Pavan, S. S. Singh, A. K. Pandey, Ram Kumar Singh, Prashant Kumar Srivast
 <div id="ref-Mallory2021" class="csl-entry">
 Mallory, Mindy L. 2021. <span>“<span class="nocase">Impact of COVID-19 on Medium-Term Export Prospects for Soybeans, Corn, Beef, Pork, and Poultry</span>.”</span> <em>Applied Economic Perspectives and Policy</em> 43 (1): 292–303. <a href="https://doi.org/10.1002/aepp.13113">https://doi.org/10.1002/aepp.13113</a>.
 </div>
+<div id="ref-Obayelu2021" class="csl-entry">
+Obayelu, Abiodun Elijah, Oluwakemi Adeola Obayelu, Kamilu Kolade Bolarinwa, and Richard Akinwumi Oyeyinka. 2021. <span>“<span class="nocase">Assessment of the Immediate and Potential Long-Term Effects of COVID-19 Outbreak on Socioeconomics, Agriculture, Security of Food and Dietary Intake in Nigeria</span>.”</span> <em>Food Ethics</em> 6 (1). <a href="https://doi.org/10.1007/s41055-021-00085-w">https://doi.org/10.1007/s41055-021-00085-w</a>.
+</div>
 <div id="ref-Olivia2020" class="csl-entry">
 Olivia, Susan, John Gibson, and Rus’an Nasrudin. 2020. <span>“<span class="nocase">Indonesia in the Time of Covid-19</span>.”</span> <em>Bulletin of Indonesian Economic Studies</em> 56 (2): 143–74. <a href="https://doi.org/10.1080/00074918.2020.1798581">https://doi.org/10.1080/00074918.2020.1798581</a>.
+</div>
+<div id="ref-Suryahadi2020" class="csl-entry">
+Suryahadi, Asep, Ridho Al Izzati, and Daniel Suryadarma. 2020. <span>“<span class="nocase">Estimating the Impact of Covid-19 on Poverty in Indonesia*</span>.”</span> <em>Bulletin of Indonesian Economic Studies</em>, 175–92. <a href="https://doi.org/10.1080/00074918.2020.1779390">https://doi.org/10.1080/00074918.2020.1779390</a>.
 </div>
 </div>
 </div>
